Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-45967

Volume: Data missing for N1QL handlers

    XMLWordPrintable

Details

    • Untriaged
    • 1
    • Unknown

    Description

      Build: 7.0.0 build 5046 

      Test: Eventing volume https://docs.google.com/document/d/1dJ6VhHtLaRLTPVKQm0EomakzUNZDz2x7xJv3JqZVuqw/edit?usp=sharing 

      • Create 9 node cluster ( Eventing:2 , Kv:5,index:1,query:1)
      • Create 15 handlers (3 of bucket op, timer,n1ql, SBM, curl)
      • deploy bucket op, timers and N1ql
      • Rebalance in 1 eventing node
      • Start CRUD on bucket_op where no handler are deployed
      • Verify handlers

      Source Bucket(n1ql_op.scope_0.coll0) : 6226696, Destination Bucket(['n1ql_op.scope_1.coll0']) : 6226691 

      Source Bucket(n1ql_op.scope_0.coll1) : 6226416, Destination Bucket(['n1ql_op.scope_1.coll1']) : 6226410 

      function OnUpdate(doc, meta) {
          try{
              var query = UPSERT INTO n1ql_op.scope_1.`coll0` ( KEY, VALUE ) VALUES ( $meta.id ,"n1ql insert");
          }
          catch(e){
              log("Query failed: ",e)
          }
      }function OnDelete(meta, options) {
      try{
              var query = DELETE from n1ql_op.scope_1.`coll0` USE KEYS $meta.id ;
          }
          catch(e){
              log("Query failed: ",e)
          }
      }
      
      

       
      function OnUpdate(doc, meta) {
          try{
              var query = UPSERT INTO n1ql_op.scope_1.`coll1` ( KEY, VALUE ) VALUES ( $meta.id ,"n1ql insert");
          }
          catch(e){
              log("Query failed: ",e)
          }
      }function OnDelete(meta, options) {
      try{
              var query = DELETE from n1ql_op.scope_1.`coll1` USE KEYS $meta.id ;
          }
          catch(e){
              log("Query failed: ",e)
          }
      } 

      Attachments

        1. invalid_requests (1).png
          invalid_requests (1).png
          268 kB
        2. n1ql_dmls.png
          n1ql_dmls.png
          286 kB
        3. n1ql_op_scope1_docs_difference.png
          n1ql_op_scope1_docs_difference.png
          386 kB
        4. n1ql_test0.log
          26.99 MB
        5. n1ql_test01.log
          29.66 MB
        6. n1ql_test02.log
          37.63 MB
        7. n1ql0.log
          18.79 MB
        8. n1ql01.log
          19.17 MB
        9. n1ql02.log
          23.03 MB
        10. queries_prior_to_deployment.png
          queries_prior_to_deployment.png
          269 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              abhishek.jindal Abhishek Jindal
              vikas.chaudhary Vikas Chaudhary
              Votes:
              0 Vote for this issue
              Watchers:
              15 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty