MB-45967 : Address mutations getting dropped due to racing worker queues

Problem:

It was found that in conditions where:
1. There is a slow handler (issue is more prominent with slow running handlers)
2. User triggers a rebalance
3. For partitions whose thread ownership within a consumer process can change post rebalance

there can be a condition where mutations, already present in worker queues of
both old and new threads, can be skipped and be triggered out of order.

Consider the fillowing scenario:
* Current owner: Thread0 . Mutations in queue: 1,2,3,4,5
* User hits rebalance
* vb map is updated and new owner for this partition is Thread1.
* Go consumer sends last_sent_seq_no = 5 filter to consumer.
* The global vbfilter_map_ is updated with 5 as filter for this partition.
* Mutations from new stream request now fills up Thread1's worker queue
* Thread1 . Mutations in queue: 1,2,3,4,5
* At this point both Thread0 and Thread1 have similar mutations in queue.
* Note: Both threads lookup the global vbfilter_map_ and decide to skip mutations.
* Whichever thread empties its queue first clears off the filter.
* Note: Mutations remaining in queue of other thread are now out of order.

Solution:

* Each V8Worker now owns a vbfilter_map_ . It is not a global map anymore.
* This ensures that each V8Worker consults it's own filter_map hence addressing the race.
* It should also be ensured that for the entire lifecycle of a vb stream:
  StreamCreation -> Vbucket map update -> StreamEnd
  the owning thread remains unchanged unlike the current behaviour where owner can change
  between during "Vbucket map update" phase and "StreamEnd"
* For this, have added the concept of current_partition_map and elected_partition_map.
* elected_partition_thr_map - Holds "elected" thread for that partition at the beginning of a StreamRequest.
  Note that this owner can change during "Vbucket map update" phase of cycle.
* current_partition_thr_map - Is same as elected at the beginning of a cycle but
  remains unchanged during "Vbucket map update".
* All mutation, deletion, noop for a vbucket is sent to the thread in current map.

Change-Id: I90cd6f9727965e98e11a41df830323dc3bcc9c3c
Reviewed-on: http://review.couchbase.org/c/eventing/+/153424
Reviewed-by: <ankit.prabhu@couchbase.com>
Reviewed-by: CI Bot
Tested-by: <abhishek.jindal@couchbase.com>